WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71873
Better abstract 'abs' operation through the MacroAssembler.
https://bugs.webkit.org/show_bug.cgi?id=71873
Summary
Better abstract 'abs' operation through the MacroAssembler.
Gavin Barraclough
Reported
2011-11-08 18:35:02 PST
Currently the x86 specific instruction sequence to perform a double abs is duplicated throughout the JITs / thunk generators.
Attachments
Fix
(20.24 KB, patch)
2011-11-08 18:36 PST
,
Gavin Barraclough
no flags
Details
Formatted Diff
Diff
Fixed typo in changelog.
(20.24 KB, patch)
2011-11-08 18:44 PST
,
Gavin Barraclough
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2011-11-08 18:36:04 PST
Created
attachment 114190
[details]
Fix
WebKit Review Bot
Comment 2
2011-11-08 18:40:30 PST
Attachment 114190
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/assembler/X86Assembler.h:1571: andpd_rr is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/JavaScriptCore/assembler/X86Assembler.h:1577: andpd_mr is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Source/JavaScriptCore/assembler/X86Assembler.h:1584: andpd_mr is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 3 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gavin Barraclough
Comment 3
2011-11-08 18:44:42 PST
Created
attachment 114194
[details]
Fixed typo in changelog.
Geoffrey Garen
Comment 4
2011-11-08 18:56:16 PST
Comment on
attachment 114194
[details]
Fixed typo in changelog. View in context:
https://bugs.webkit.org/attachment.cgi?id=114194&action=review
r=me
> Source/JavaScriptCore/runtime/JSGlobalData.cpp:92 > +const uint64_t MacroAssemblerX86Common::s_maskSignBit = 0x7FFFFFFFFFFFFFFFull;
I think I saw this line of code on Reddit once. FFFFFFFFFFU!!
Gavin Barraclough
Comment 5
2011-11-08 19:01:29 PST
Comment on
attachment 114194
[details]
Fixed typo in changelog. committing by hand!
Gavin Barraclough
Comment 6
2011-11-08 19:02:34 PST
Fixed in
r99647
.
Csaba Osztrogonác
Comment 7
2011-11-08 22:24:13 PST
(In reply to
comment #6
)
> Fixed in
r99647
.
It broke jsc and layout tests on all bot.
Csaba Osztrogonác
Comment 8
2011-11-08 22:50:18 PST
(In reply to
comment #6
)
> Fixed in
r99647
.
I tried to ping you on #webkit, but I assume you aren't in the office now. This patch broke almost all jsc tests and layout tests on SL, GTK and Qt, so I had to roll it out to recover the test coverage:
http://trac.webkit.org/changeset/99652
(when nobody was on board to fix it quickly)
Gavin Barraclough
Comment 9
2011-11-08 23:42:44 PST
(In reply to
comment #8
)
> (In reply to
comment #6
) > > Fixed in
r99647
. > > I tried to ping you on #webkit, but I assume you aren't in the office now. > > This patch broke almost all jsc tests and layout tests on SL, GTK and Qt, so > I had to roll it out to recover the test coverage:
http://trac.webkit.org/changeset/99652
(when nobody was on board to fix it quickly)
Hey Ossy, I just saw the rollout, I'm still a little confused – the jsc tests all pass on my machine, I'm just re-running the webkit ones now. Still, clearly looks like something bad happened on the bots, and understood, we can't leave them broken. G.
Gavin Barraclough
Comment 10
2011-11-09 00:10:26 PST
Still not seeing any crashes on my machine. I'm testing on Lion, rather than Snow Leopard, but not obvious what wound be different. Hmmmm.
Tom Schuster
Comment 11
2011-11-09 12:29:25 PST
We have code in SpiderMonkey for absDouble, in think you could use that. We also have double -> int32 conversation.
Gavin Barraclough
Comment 12
2012-03-08 16:34:19 PST
The important parts of this have been re-landed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug