Source/JavaScriptCore/dfg/DFGSpeculativeJIT32_64.cpp
@@ -1256,12 +1256,9 @@ void SpeculativeJIT::compile(Node& node)
         }
         
         SpeculateDoubleOperand op1(this, node.child1());
-        FPRTemporary result(this);
+        FPRTemporary result(this, op1);
         
-        static const double negativeZeroConstant = -0.0;
-        
-        m_jit.loadDouble(&negativeZeroConstant, result.fpr());
-        m_jit.andnotDouble(op1.fpr(), result.fpr());
+        m_jit.absDouble(op1.fpr(), result.fpr());
         doubleResult(result.fpr(), m_compileIndex);
         break;
     }
